samples/_failures_safe/1761174857_10435d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5f28752.c: In function ‘main’:
./samples/SAFE/__tmp_a5f28752.c:156:34: error: missing terminating " character
  156 |             int rows1 = read_int("Enter
      |                                  ^~~~~~
./samples/SAFE/__tmp_a5f28752.c:156:13: error: expected expression at end of input
  156 |             int rows1 = read_int("Enter
      |             ^~~
./samples/SAFE/__tmp_a5f28752.c:156:25: error: too few arguments to function ‘read_int’
  156 |             int rows1 = read_int("Enter
      |                         ^~~~~~~~
./samples/SAFE/__tmp_a5f28752.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_a5f28752.c:156:13: error: expected declaration or statement at end of input
  156 |             int rows1 = read_int("Enter
      |             ^~~
./samples/SAFE/__tmp_a5f28752.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5f28752.c:156:13: error: expected declaration or statement at end of input
